--- a/data/style.css
+++ b/data/style.css
@@ -17,9 +17,9 @@ html {
     border: none;
     border-radius: 4px;
     color: white;
-    padding: 16px 40px;
+    padding: 4x 10px;
     text-decoration: none;
-    font-size: 30px;
+    font-size: 15px;
     margin: 2px;
     cursor: pointer;
   }
